force-app/main/default/objects/RebelFaction__c/RebelFaction__c.object-meta.xml
<CustomObject>
    <label>RebelFaction</label>
    <pluralLabel>RebelFactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>RebelFaction Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>