force-app/main/default/objects/RebelFaction__c/fields/Culture__c.field-meta.xml
<CustomField>
    <fullName>Culture__c</fullName>
    <label>Culture</label>
    <type>Text</type>
    <length>255</length>
</CustomField>