force-app/main/default/objects/RebelFaction__c/fields/Government__c.field-meta.xml
<CustomField>
    <fullName>Government__c</fullName>
    <label>Government</label>
    <type>Text</type>
    <length>255</length>
</CustomField>