force-app/main/default/objects/RebelFaction__c/fields/Independence__c.field-meta.xml
<CustomField>
    <fullName>Independence__c</fullName>
    <label>Independence</label>
    <type>Text</type>
    <length>255</length>
</CustomField>