force-app/main/default/objects/RebelFaction__c/fields/Next_unit__c.field-meta.xml
<CustomField>
    <fullName>Next_unit__c</fullName>
    <label>Next unit</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>