force-app/main/default/objects/RebelFaction__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <label>Organization</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>