force-app/main/default/objects/RebelFaction__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Province</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>